fixed name to be inline block so it doesnt wrap on smaller device screen

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ p {
 .name {
     color: hsl(34, 82%, 45%);
     font-family: Ubuntu-Medium;
+    display: inline-block;
 }
 
 .desktop-nav  {
